--- a/index.html
+++ b/index.html
@@ -297,11 +297,11 @@
       <!--end session four-->
       <section id="session-four">
         <div class="position-relative">
-          <div class="size-image">
-            <img class="float-right" src="/image/runing.png" alt="runing" />
+          <div class="size-image d-flex justify-content-end">
+            <img src="/image/runing.png" alt="runing" />
           </div>
           <!--accordion-->
-          <div class="position-absolute accordion" id="accordion">
+          <div class="accordion" id="accordion">
             <div class="card">
               <div class="card-header" id="headingOne">
                 <h2 class="mb-0">
@@ -394,8 +394,12 @@
               </div>
             </div>
           </div>
+          <!--end accordion-->
         </div>
+        <!--end session four-->
       </section>
+
+      <section></section>
     </main>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
