section five and footer

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <div
           class="position-relative container-fluid col-11 col-sm-10 col-md-9 col-lg-8"
         >
-          <img class="w-100" src="/image/image.png" alt="paisaje" />
+          <img class="w-100" src="image/image.png" alt="paisaje" />
           <!--Carousel text-->
           <div
             id="carousel-text"
@@ -298,7 +298,7 @@
       <section id="session-four">
         <div class="position-relative">
           <div class="size-image d-flex justify-content-end">
-            <img src="/image/runing.png" alt="runing" />
+            <img src="image/runing.png" alt="runing" />
           </div>
           <!--accordion-->
           <div class="accordion" id="accordion">
@@ -396,11 +396,66 @@
           </div>
           <!--end accordion-->
         </div>
-        <!--end session four-->
       </section>
+      <!--end session four-->
 
-      <section></section>
+      <!--session five-->
+      <section id="session-five">
+        <div class="d-flex align-items-center justify-content-center">
+          <form class="col-5 my-5 mr-5" action="#">
+            <h2>Get in touch <span>We are hiring!</span></h2>
+            <div class="form-group">
+              <label class="mt-5" for="name"></label>
+              <input
+                type="text"
+                class="form-control border-top-0 border-right-0 border-left-0"
+                placeholder="Name"
+                id="name"
+              />
+            </div>
+            <div class="form-group">
+              <label for="email"></label>
+              <input
+                type="email"
+                class="form-control border-top-0 border-right-0 border-left-0"
+                placeholder="Email"
+                id="email"
+              />
+            </div>
+            <div class="form-group">
+              <label for="phone"></label>
+              <input
+                type="text"
+                class="form-control border-top-0 border-right-0 border-left-0"
+                placeholder="Phone"
+                id="phone"
+              />
+            </div>
+            <div class="form-group">
+              <label for="message"></label>
+              <input
+                type="text"
+                class="form-control border-top-0 border-right-0 border-left-0"
+                placeholder="Message"
+                id="message"
+              />
+            </div>
+            <button type="submit" class="btn rounded-pill active my-4">
+              Send
+            </button>
+          </form>
+          <div class="col-5">
+            <img class="w-100" src="image/globos.png" alt="globos" />
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="d-flex align-items-center justify-content-between px-5 py-4">
+      <p class="mb-0">2020 &copy All rights reserved</p>
+      <div>
+        <img src="image/logo_25w (1).svg" alt="logo footer" />
+      </div>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
