--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           class="navbar nav-tabs navbar-expand-md navbar-light py-2 py-md-0 px-md-5"
         >
           <img
-            src="image/logo_25w (2).svg"
+            src="images/logo_25w (2).svg"
             alt="logo25w"
             class="pl-3 pl-md-0"
           />
@@ -76,7 +76,7 @@
             <div class="image-slide">
               <img
                 class="d-block w-100"
-                src="image/slide1-background.png"
+                src="images/slide1-background.png"
                 alt="First slide"
               />
             </div>
@@ -101,7 +101,7 @@
             <div class="image-slide">
               <img
                 class="d-block w-100"
-                src="image/slide2-background.png"
+                src="images/slide2-background.png"
                 alt="Second slide"
               />
             </div>
@@ -126,7 +126,7 @@
             <div class="image-slide">
               <img
                 class="d-block w-100"
-                src="image/slide3-background.png"
+                src="images/slide3-background.png"
                 alt="Third slide"
               />
             </div>
@@ -213,7 +213,7 @@
         <div
           class="position-relative container-fluid col-11 col-sm-10 col-md-9 col-lg-8"
         >
-          <img class="w-100" src="image/image.png" alt="paisaje" />
+          <img class="w-100" src="images/image.png" alt="paisaje" />
           <!--Carousel text-->
           <div id="carousel-text" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" role="listbox">
@@ -275,7 +275,7 @@
       <section id="sec-four">
         <div class="position-relative">
           <div class="size-image d-flex justify-content-end">
-            <img src="image/runing.png" alt="runing" />
+            <img src="images/runing.png" alt="runing" />
           </div>
           <!--accordion-->
           <div class="accordion" id="accordion">
@@ -293,12 +293,12 @@
                     Sed ut perspiciatis
                     <img
                       class="down-arrow"
-                      src="image/Icon feather-chevron-down.svg"
+                      src="images/Icon feather-chevron-down.svg"
                       alt=""
                     />
                     <img
                       class="up-arrow"
-                      src="image/Icon feather-chevron-up.svg"
+                      src="images/Icon feather-chevron-up.svg"
                       alt=""
                     />
                   </button>
@@ -334,12 +334,12 @@
                     Ut enim ad minima veniam
                     <img
                       class="down-arrow"
-                      src="image/Icon feather-chevron-down.svg"
+                      src="images/Icon feather-chevron-down.svg"
                       alt=""
                     />
                     <img
                       class="up-arrow"
-                      src="image/Icon feather-chevron-up.svg"
+                      src="images/Icon feather-chevron-up.svg"
                       alt=""
                     />
                   </button>
@@ -374,12 +374,12 @@
                     Sit amet, consectetur, adipisci
                     <img
                       class="down-arrow"
-                      src="image/Icon feather-chevron-down.svg"
+                      src="images/Icon feather-chevron-down.svg"
                       alt=""
                     />
                     <img
                       class="up-arrow"
-                      src="image/Icon feather-chevron-up.svg"
+                      src="images/Icon feather-chevron-up.svg"
                       alt=""
                     />
                   </button>
@@ -475,7 +475,7 @@
           </form>
           <!--end form-->
           <div class="col-sm-5">
-            <img class="w-100" src="image/globos.png" alt="globos" />
+            <img class="w-100" src="images/balloons.png" alt="balloons" />
           </div>
         </div>
       </section>
