--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
     <footer class="d-flex align-items-center justify-content-between px-5 py-4">
       <p class="mb-0">2020 &copy All rights reserved</p>
       <div>
-        <img src="image/logo_25w (1).svg" alt="logo footer" />
+        <img src="images/logo_25w (1).svg" alt="logo footer" />
       </div>
     </footer>
     <script src="js/index.js"></script>
