--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
     />
     <!--CSS-->
     <link rel="stylesheet" href="css/styles.css" />
-    <script
-      src="https://kit.fontawesome.com/65fa9dc455.js"
-      crossorigin="anonymous"
-    ></script>
+
     <title>23watts</title>
   </head>
   <body>
@@ -35,11 +32,13 @@
           id="nav"
           class="navbar nav-tabs navbar-expand-md navbar-light py-2 py-md-0 px-md-5"
         >
-          <img
-            src="images/logo_25w (2).svg"
-            alt="logo25w"
-            class="pl-3 pl-md-0"
-          />
+          <a href="#">
+            <img
+              src="images/logo_25w (2).svg"
+              alt="logo25w"
+              class="pl-3 pl-md-0"
+            />
+          </a>
           <button
             class="navbar-toggler mr-3 mr-md-0"
             type="button"
@@ -486,7 +485,10 @@
         <img src="images/logo_25w (1).svg" alt="logo footer" />
       </div>
     </footer>
-    <script src="js/index.js"></script>
+    <script
+      src="https://kit.fontawesome.com/65fa9dc455.js"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -497,5 +499,6 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
